--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
 # Python
+__pycache__/
 *.pyc
+
+# Django
 db.sqlite3
+media/
+staticfiles/
+
 *.log
+# Virtual environment
 venv/
 .vscode/
 .idea/
 *.DS_Store
+
